fixing some spacing issues

--- a/src/styles/components/_project.scss
+++ b/src/styles/components/_project.scss
@@ -5,6 +5,13 @@
 	@include media($mobile) {
 		overflow-y: auto;
 		-webkit-overflow-scrolling: touch;
+		padding-top: 80px;
+		padding-bottom: 80px;
+	}
+
+	@include media($screen-xl) {
+		padding-top: 40px;
+		padding-bottom: 0px;
 	}
 }
 
@@ -12,15 +19,11 @@
 	@include media($mobile) {
 		@include span-columns(10);
 		@include shift(1);
-		margin-top: 80px;
-		margin-bottom: 80px;
 	}
 
 	@include media($screen-xl) {
 		@include span-columns(12);
 		@include shift(0);
-		margin-top: 40px;
-		margin-bottom: 0px;
 	}
 
 	div {
